--- a/ports/unix/check/Makefile
+++ b/ports/unix/check/Makefile
@@ -32,7 +32,7 @@
 CODEDIR=../../../../lwip
 LWIPDIR=$(CODEDIR)/src
 
-LDFLAGS:=$(LDFLAGS) -lcheck -lm -lpthread -lrt
+LDFLAGS:=$(LDFLAGS) -lcheck -lm -lpthread -lrt -lsubunit
 CFLAGS:=$(CFLAGS) -DLWIP_UNIX_EMPTY_ASSERT -I/usr/include/check -I$(LWIPDIR)/../test/unit \
 	-I$(LWIPDIR)/include -Iunix/include -I. -I../include
 
