--- a/ports/win32/msvc/lwIP.vcxproj
+++ b/ports/win32/msvc/lwIP.vcxproj
@@ -235,6 +235,7 @@
     <ClCompile Include="$(LWIP_DIR)\src\api\sockets.c" />
     <ClCompile Include="$(LWIP_DIR)\src\api\tcpip.c" />
     <ClCompile Include="$(LWIP_DIR)\src\apps\sntp\sntp.c" />
+    <ClCompile Include="$(LWIP_DIR)\src\apps\lwiperf\lwiperf.c" />
     <ClCompile Include="$(LWIP_DIR)\src\core\def.c" />
     <ClCompile Include="$(LWIP_DIR)\src\core\dhcp.c" />
     <ClCompile Include="$(LWIP_DIR)\src\core\dns.c" />
@@ -309,7 +310,9 @@
     <ClCompile Include="..\sys_arch.c" />
   </ItemGroup>
   <ItemGroup>
+    <ClInclude Include="$(LWIP_DIR)\src\include\lwip\apps\lwiperf.h" />
     <ClInclude Include="$(LWIP_DIR)\src\include\lwip\apps\sntp.h" />
+    <ClInclude Include="$(LWIP_DIR)\src\include\lwip\apps\sntp_opts.h" />
     <ClInclude Include="$(LWIP_DIR)\src\include\lwip\api.h" />
     <ClInclude Include="$(LWIP_DIR)\src\include\lwip\api_msg.h" />
     <ClInclude Include="$(LWIP_DIR)\src\include\lwip\arch.h" />
