--- a/ports/win32/msvc/lwIP_Test.vcxproj.filters
+++ b/ports/win32/msvc/lwIP_Test.vcxproj.filters
@@ -8,18 +8,12 @@
     <Filter Include="Source Files\apps">
       <UniqueIdentifier>{0582eefd-a68e-45f8-b93c-f828c4794f30}</UniqueIdentifier>
     </Filter>
-    <Filter Include="Source Files\private_mib">
-      <UniqueIdentifier>{50da041b-5512-4284-9d53-8d7aaaa99ca4}</UniqueIdentifier>
-    </Filter>
   </ItemGroup>
   <ItemGroup>
     <ClCompile Include="..\test.c">
       <Filter>Source Files</Filter>
     </ClCompile>
     <ClCompile Include="..\..\..\apps\chargen\chargen.c">
-      <Filter>Source Files\apps</Filter>
-    </ClCompile>
-    <ClCompile Include="..\..\..\apps\tcpecho_raw\echo.c">
       <Filter>Source Files\apps</Filter>
     </ClCompile>
     <ClCompile Include="..\..\..\apps\httpserver\httpserver-netconn.c">
@@ -49,15 +43,18 @@
     <ClCompile Include="..\..\..\apps\udpecho\udpecho.c">
       <Filter>Source Files\apps</Filter>
     </ClCompile>
+    <ClCompile Include="..\..\..\apps\tcpecho_raw\tcpecho_raw.c">
+      <Filter>Source Files\apps</Filter>
+    </ClCompile>
+    <ClCompile Include="..\..\..\apps\udpecho_raw\udpecho_raw.c">
+      <Filter>Source Files\apps</Filter>
+    </ClCompile>
     <ClCompile Include="..\..\..\apps\snmp_private_mib\lwip_prvmib.c">
-      <Filter>Source Files\private_mib</Filter>
+      <Filter>Source Files\apps</Filter>
     </ClCompile>
   </ItemGroup>
   <ItemGroup>
     <ClInclude Include="..\..\..\apps\chargen\chargen.h">
-      <Filter>Source Files\apps</Filter>
-    </ClInclude>
-    <ClInclude Include="..\..\..\apps\tcpecho_raw\echo.h">
       <Filter>Source Files\apps</Filter>
     </ClInclude>
     <ClInclude Include="..\..\..\apps\httpserver\httpserver-netconn.h">
@@ -87,8 +84,14 @@
     <ClInclude Include="..\..\..\apps\udpecho\udpecho.h">
       <Filter>Source Files\apps</Filter>
     </ClInclude>
+    <ClInclude Include="..\..\..\apps\tcpecho_raw\tcpecho_raw.h">
+      <Filter>Source Files\apps</Filter>
+    </ClInclude>
+    <ClInclude Include="..\..\..\apps\udpecho_raw\udpecho_raw.h">
+      <Filter>Source Files\apps</Filter>
+    </ClInclude>
     <ClInclude Include="..\..\..\apps\snmp_private_mib\private_mib.h">
-      <Filter>Source Files\private_mib</Filter>
+      <Filter>Source Files\apps</Filter>
     </ClInclude>
   </ItemGroup>
   <ItemGroup>
